--- a/src/App.css
+++ b/src/App.css
@@ -160,3 +160,66 @@ margin: 1.5rem auto;
 color:#fbdabb;
 }
 /* dishes area end */
+
+
+/* form start */
+.formContent{
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  background-color:#edefee;
+  width: 100vw;
+  height: 100vh;
+}
+form{
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  /* text-align: center; */
+  flex-direction: column;
+  gap:2rem;
+width: 50%;
+  margin: 0 auto;
+  padding: 4rem 0;
+  background-color:#495e57;
+  border-radius: 10px;
+
+
+}
+
+form div{
+  /* border: 1px solid red; */
+ width: 30vw;
+ display: flex;
+ justify-content: start;
+ align-items: center;
+ gap: 3rem;
+}
+form div :nth-child(1){
+  width: 40%;
+color: white;
+font-size: 18px;
+align-self: self-start;
+}
+form div :nth-child(2){
+  width: 50%;
+font-size: 18px;
+align-self: self-start;
+}
+
+
+/* form end */
+
+
+/* footer  start*/
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 1rem 0;
+  background-color: #495e57;
+  color: white;
+}
+/* footer  end*/
